--- a/projetos.html
+++ b/projetos.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+	<h1 class="aviso">Versão Mobile temporariamente indisponível</h1>
 	<ul id="ul">
 		<li><a href="./index.html">Início</a></li>
 		<!--<li class="dropdown">
